2003-11-30  Ettore Perazzoli  <ettore@ximian.com>

	* mail-offline-handler.c: Remove all the syncFolder stuff since
	it's not in the Component interface anymore.

	* mail-mt.c: Remove declaration for global_shell_client.  #if 0
	all the code that uses that.

	* mail-component-factory.c: Remove declaration for
	global_shell_client.

	* mail-vfolder.c: Remove declaration for global_shell_client.

2003-11-26  JP Rosevear  <jpr@ximian.com>

	* Makefile.am: turn on deprecated Gtk stuff

2003-11-24  Jeffrey Stedfast  <fejj@ximian.com>

	* em-folder-tree.c (em_folder_tree_save_state): New function to
	save tree expanded state.
	(em_folder_tree_queue_save_state): New function to queue saving of
	the expanded state.
	(em_folder_tree_construct): Connect to the row-collapsed signal.
	(tree_row_collapsed): Queue a save-state.
	(tree_row_expanded): Queue a save state.
	(em_folder_tree_get_folder_info__got): Queue a save-state.

2003-11-25  Not Zed  <NotZed@Ximian.com>

	* em-folder-view.c (em_folder_view_print): set session on print
	formatter for signatures to work.

	* em-message-browser.c (emmb_destroy): kill warning.

	* em-format-html.c (efh_output_secure): same as
	efhd_output_secure, output the security bar, but for
	printing/plain html.
	(efh_application_xpkcs7mime): use output_secure.
	(em_format_html_multipart_signed_sign): removed, output_secure
	does what this did.

	* em-format-html-display.c (smime_sign_table,
	smime_encrypt_table): Added a short description for the mail
	display.
	(efhd_xpkcs7mime_button): only good/bad signature at this point,
	if only encrypted, then display 'bad' icon.
	(efhd_output_secure): output the security bar/button and handle
	multi-level enveloping properly.
	(efhd_application_xpkcs7mime): just call output_secure to do
	the security bar.
	(efhd_multipart_signed): same.
	(efhd_signature_button): removed, no longer used.
	(efhd_signature_check): removed, no longer used.

2003-11-24  Radek Doulik  <rodo@ximian.com>
